--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,60 @@
+* {
+  box-sizing: border-box;
+  font-family: 'Lucida Sans', Arial, Helvetica, sans-serif;
+}
+
 body {
-  padding: 50px;
+  margin: 0;
+  height: 100vh;
+  width: auto;
+  display: grid;
+  grid-template-rows: 50px 1fr;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  grid-template-areas:
+    "nav"
+    "main"
+  /* padding: 50px; */
 }
 
 a {
   color: #00B7FF;
+}
+body > nav {
+  grid-area: nav;
+  background-color: #B8C0C2;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 20px;
+}
+body > main {
+  grid-area: main;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #E8ECEB;
+  padding: 20px;
+  /* overflow-y: scroll; */
+}
+
+nav > img {
+  width: 34px;
+  object-fit: contain;
+  margin-right: auto;
+}
+nav > a {
+  margin: 20px;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+}
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 34px;
+}
+
+.login img {
+  height: 30px;
 }
