Reaffirmed that created events are registering to dB

--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -3,7 +3,7 @@
 <h2>Enter New Event</h2>
 <div class="container">
     <form action="/events" method="POST">
-        <label for="name">Event Name:
+        <label for="eventName">Event Name:
             <input type="text" >
         </label><br>
         <label for="date">Date:
