Debug the create function and render events to index

--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -6,7 +6,7 @@
   <h2>Welcome <%= user.name %></h2><br>
 
   <h2>Upcoming Events</h2>
-    <% if(events.date) { %>
+    <% if(events.length) { %>
   <table>
     <thead>
         <tr>
