Add the event details page (show.ejs) for each event

--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -3,19 +3,19 @@
 <h2>Enter New Event</h2>
 <div class="container">
     <form action="/events" method="POST">
-        <label for="eventName">Event Name:
+        <label >Event Name:
             <input type="text" name="eventName">
         </label><br>
-        <label for="date">Date:
-            <input type="datetime-local" name="date" id="date">
+        <label >Date:
+            <input type="datetime-local" name="date" >
         </label><br>
-        <label for="place">Place: 
+        <label >Place: 
             <input type="text" name="place">
         </label><br>
-        <label for="cost">Cost:
+        <label >Cost:
             <input type="number" name="cost">
         </label><br>
-        <label for="description">Description: 
+        <label >Description: 
             <textarea name="description" id="event-desc"></textarea>
         </label><br>
         <button type="submit">Add Event</button>
