--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
   <body>
     <nav>
       <% if (user) {%>
+        <a href="/events">HOME</a>
         <a href="/events/new">ADD EVENT</a>
         <a href="/logout">LOG OUT</a>
       <% } else { %>
