--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -19,9 +19,9 @@
     <tbody>
         <% events.forEach(e => { %>
         <tr>
-            <td>INFO</td>
+            <td><a href="/events/<%= e._id %>"> INFO </a></td>
             <td><%= e.eventName %></td>
-            <td><%= e.date %></td>
+            <td><%= e.formattedDate %></td>
             <td><%= e.place %></td>
         </tr>
         <% }); %>
