--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -21,7 +21,7 @@
         <tr>
             <td><a href="/events/<%= e._id %>"> INFO </a></td>
             <td><%= e.eventName %></td>
-            <td><%= e.formattedDate %></td>
+            <td><%= e.date %></td>
             <td><%= e.place %></td>
         </tr>
         <% }); %>
