--- a/views/events/show.ejs
+++ b/views/events/show.ejs
@@ -22,7 +22,7 @@
   <input type="submit" value="Add Comment">
 </form>
 <% if(event.comments.length){ %>
-  <div class="container">
+  <div class="comment">
     <div>
       <% event.comments.forEach( (c) => { %>
         <div><img src="<%= c.userAvatar %>" referrerpolicy="no-referrer" alt="avatar"> <%= c.userName %></div><br>
