--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,18 +1,59 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
-    <nav>
-      <% if (user) {%>
-        <a href="/events">HOME</a>
-        <a href="/events/new">ADD EVENT</a>
-        <a href="/logout">LOG OUT</a>
-      <% } else { %>
-        <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
-      <% } %>
-    </nav>
-    <main>
-        
+    <!-- this container wraps around ALL my HTML code -->
+    <div class="container m -0" data-bs-theme="light">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <span class="navbar-brand mb-0 h1">Plan-It</span>
+                <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+            </div>
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/events">HOME</a>
+                  </li>
+                  <% if (user) {%>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/events/new">ADD EVENT</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">INVITE</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/logout">LOG OUT</a>
+                  </li>
+                  <% } else { %>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/auth/google">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png" width="30" height="30" class="d-inline-block align-text-top"></a>
+                    </li>
+                    <% } %>
+                  <!-- <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li> -->
+                </ul>
+              </div>
+            </div>
+          </nav>
