--- a/views/events/show.ejs
+++ b/views/events/show.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header') %>
 
-<h2>Event Details</h2>
-<div class="e-info">
-  <div>Event: </div><div><%= event.eventName %></div><br>
+<h2><%= event.eventName %> Details</h2>
+<div class="">
+  <!-- <div>Event: </div><div><%= event.eventName %></div><br> -->
   <div>Date: </div><div><%= event.date.toLocaleTimeString([], {hour: 'numeric', minute: '2-digit' }) %> 
     <%= event.date.toLocaleDateString('en-US', {month: 'long', day: 'numeric', year: 'numeric'}) %></div><br>
   <div>Place: </div><div><%= event.place %></div><br>
@@ -10,11 +10,12 @@
   <div>Description: </div><div><%= event.description %></div><br>
 </div>
 <br>
-<!-- <a href="/events/<%= event._id %>/edit" class="button">Edit</a> -->
+<% if(user?._id.equals(event.user)) {%>
 <button onclick="location.href='/events/<%= event._id %>/edit'">Edit</button>
 <form action="/events/<%= event._id %>?_method=DELETE" method="POST">
   <button type="submit">DELETE Event</button>
 </form>
+<% } %>
 <br><br>
 <h3>Comments</h3>
 <form action="/events/<%= event._id %>/comments" method="POST">
