--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,10 +9,9 @@
   <body>
     <!-- this container wraps around ALL my HTML code -->
     <div class="container m -0" data-bs-theme="light">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1">Plan-It</span>
-                <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary mb-2">
+            <div class="container-fluid">                
+                <a class="navbar-brand h1" href="#">PLAN-IT</a>
             </div>
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,19 +19,30 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <form class="d-flex" role="search">
+                  <!-- <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
+                  </form> -->
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">ABOUT</a>
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/events">HOME</a>
                   </li>
                   <% if (user) {%>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="nav-link" href="/events/new">ADD EVENT</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">INVITE</a>
+                  </li> -->
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      EVENTS
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="/events/new">ADD EVENT</a></li>
+                      <li><a class="dropdown-item disabled" href="#">MY EVENTS</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item disabled" href="#">INVITE TO EVENT</a></li>
+                    </ul>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/logout">LOG OUT</a>
@@ -42,17 +52,6 @@
                       <a class="nav-link" href="/auth/google">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png" width="30" height="30" class="d-inline-block align-text-top"></a>
                     </li>
                     <% } %>
-                  <!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li> -->
                 </ul>
               </div>
             </div>
