--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= title %></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    
   </head>
   <body>
-    <!-- this container wraps around ALL my HTML code -->
+    
     <div class="container m -0" data-bs-theme="light">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary mb-2">
-            <div class="container-fluid">                
+        <nav class="navbar navbar-expand-lg bg-body-tertiary mb-2" data-bs-theme="dark">
+            <div class="container-fluid ">                
                 <a class="navbar-brand h1" href="#">PLAN-IT</a>
             </div>
             <div class="container-fluid">
@@ -30,26 +31,23 @@
                     <a class="nav-link active" aria-current="page" href="/events">HOME</a>
                   </li>
                   <% if (user) {%>
-                  <!-- <li class="nav-item">
-                    <a class="nav-link" href="/events/new">ADD EVENT</a>
-                  </li> -->
+                  
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       EVENTS
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="/events/new">ADD EVENT</a></li>
-                      <li><a class="dropdown-item disabled" href="#">MY EVENTS</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item disabled" href="#">INVITE TO EVENT</a></li>
+                      <li><a class="dropdown-item " href="/events/new">ADD EVENT</a></li>
+                      <li><a class="dropdown-item disabled" href="#">MY EVENTS</a></li>                      
+                      <li><a class="dropdown-item disabled" href="#">INVITES</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/logout">LOG OUT</a>
+                    <a class="nav-link active" href="/logout">LOG OUT</a>
                   </li>
                   <% } else { %>
                     <li class="nav-item">
-                      <a class="nav-link" href="/auth/google">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png" width="30" height="30" class="d-inline-block align-text-top"></a>
+                      <a class="nav-link active" href="/auth/google">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png" width="30" height="30" class="d-inline-block align-text-top"></a>
                     </li>
                     <% } %>
                 </ul>
