--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,9 @@
         </div>
+        <footer class="footer bg-light text-center">
+            <div class="container fixed-bottom">
+                <p>&copy; 2023 Plan-It. All rights reserved.</p>
+            </div>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <script type="text/JavaScript" src="https://MomentJS.com/downloads/moment-with-locales.js"></script>
         <script>
