Update the 'Edit Event' page with bootstrap and minor adj to 'Event Details' page

--- a/views/events/show.ejs
+++ b/views/events/show.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
 <div class="container-fluid mt-3" style="max-width: 60%;">
-  <h2 class="text-center"><%= event.eventName %> Details</h2>
+  <h2 class="text-center"><%= event.eventName %></h2>
   <div class="card">
     <img src="/images/event-default1.png" class="card-img-top img-fluid" alt="Event Image">
     <div class="card-body">
@@ -19,7 +19,7 @@
     </div>
   </div>
       <% } %>
-      <!-- comments section beginning -->
+      <!-- comments beginning -->
 <div class="card mt-0 mb-5">
   <div class="card-body">
     <h5 class="card-title">Comments</h5>
