--- a/views/events/edit.ejs
+++ b/views/events/edit.ejs
@@ -1,31 +1,35 @@
 <%- include('../partials/header') %>
 
-<h2><%= title %></h2>
-<div class="container">
+<div class="container-fluid mt-5" style="max-width: 60%">
+    <h2><%= title %></h2>
     <form action="/events/<%= event._id %>?_method=PUT" method="POST">
-        <label >Event Name:
-            <input type="text" name="eventName" value="<%= event.eventName %>">
-        </label><br>
-        <label >Date:
-            <input type="datetime-local" name="date" value="<%= event.formattedDate %>" >
-        </label><br>
-        <label >Place: 
-            <input type="text" name="place" value="<%= event.place %>">
-        </label><br>
-        <label >Cost:
-            <select name="cost">
+        <div class="mb-3">
+            <label class="form-label">Event Name</label>
+            <input type="text" class="form-control" name="eventName" value="<%= event.eventName %>" required>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Date</label>
+            <input type="datetime-local" class="form-control" name="date" value="<%= event.formattedDate %>" required>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Place</label>
+            <input type="text" class="form-control" name="place" value="<%= event.place %>">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Cost</label>
+            <select class="form-select" name="cost">
                 <option value="Free">Free</option>
                 <option value="$">$</option>
                 <option value="$$">$$</option>
                 <option value="$$$">$$$</option>
             </select>
-        </label><br>
-        <label >Description: 
-            <textarea name="description" id="event-desc" ><%= event.description %></textarea>
-        </label><br>
-        <button type="submit">Update Event</button>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Description</label>
+            <textarea class="form-control" name="description" id="event-desc"><%= event.description %></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Update Event</button>
     </form>
 </div>
-
 
 <%- include('../partials/footer') %>
